Fixed Layout 1 Bug, Body Was Aligning All Items

--- a/flex/my-solutions/flex-layout/style.css
+++ b/flex/my-solutions/flex-layout/style.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
-  min-height: 100vh;
+  height: 100vh;
   margin: 0;
   font-family: Roboto, sans-serif;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  border: red solid;
 }
 
 img {
@@ -44,44 +42,35 @@ a {
 }
 
 .header {
-  border: solid blue;
   display: flex;
   padding: 20px;
-  width: 100vw;
-  justify-content: center;
   justify-content: space-between;
 }
 
 .left-links {
   display: flex;
   gap: 1.5rem;
-  justify-content: flex-start;
   margin-left: 1rem;
 }
 
 .right-links {
   display: flex;
   gap: 1.5rem;
-  justify-content: flex-start;
   margin-right: 1rem;
 }
 
 .content {
-  border: solid purple;
   display: flex;
+  flex-direction: column;
   flex: 1;
-  width: 100vw;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 }
 
 .footer {
-  border: solid pink;
+  border: solid;
   background-color: #eee;
-  width: 100vw;
   display: flex;
-  padding: 20px;
-  justify-content: center;
   justify-content: space-between;
+  padding: 20px;
 }
